--- a/CSS/cadastro.css
+++ b/CSS/cadastro.css
@@ -122,11 +122,11 @@ body {
 
 .login-container {
     background-color: white;
-    width: 600px;
-    height: 645px;
+    width: 650px;
+    height: 660px;
     border-radius: 12px;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
-    padding: 2.5rem;
+    padding: 2rem;
     text-align: center;
     animation: fadeIn 1s ease;
     z-index: 1;
@@ -134,14 +134,14 @@ body {
 
 .login-container h1 {
     font-size: 1.8rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.1rem;
     color: #1E3A8A;
     font-weight: 700;
 }
 
 .login-container p {
     color: #6B7280;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     font-size: 0.95rem;
 }
 
@@ -239,3 +239,31 @@ body {
         padding: 2rem;
     }
 }
+
+.form-row {
+    display: flex;
+    gap: 1rem;
+}
+
+.form-group {
+    flex: 1;
+}
+
+.form-row input {
+    width: 100%;
+}
+
+.modelo-cor-desativado {
+    color: #414344;
+    background-color: rgba(128, 128, 128, 0.219);
+    cursor: not-allowed;
+    opacity: 0.8;
+    border-color: #ced4da;
+}
+
+.texto-desativado {
+    color: #6c757d;
+    font-style: italic;
+}
+
+
